[project]
name = "ol-vlm-opti"
version = "0.1.0"
description = "Vision-Language-Model fine tuning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "peft>=0.18.1",
    "tensorboard>=2.20.0",
    "transformers>=5.2.0",
    "triton>=3.6.0",
]

[tool.pyright]
extraPaths = ["src"]
