[project]
name = "ol-vlm-opti"
version = "0.1.0"
description = "Vision-Language Model fine-tuning with Qwen3-VL + QLoRA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "pydantic>=2.11.0",
    "tensorboard>=2.20.0",
    "torch",
    "torchaudio",
    "torchinfo>=1.8.0",
    "torchvision",
    "transformers>=5.2.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[tool.pyright]
extraPaths = ["src", "."]
